--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <title>Lost Souls</title>
   </head>
@@ -108,6 +108,6 @@
         </div>
       </div>
     </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
