--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="dist/css/main.css" />
+    <link rel="stylesheet" href="main.css" />
 
     <title>Lost Souls</title>
   </head>
